--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
   <meta property="og:description" content="Turning code into impact. We craft software, AI/ML, and experience-led products for startups, SMEs, and students." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://www.averixsolutions.example/" />
-  <meta property="og:image" content="https://images.unsplash.com/photo-1518779578993-ec3579fee39f?q=80&w=1600&auto=format&fit=crop" />
+  <meta property="og:image" content="img/original logo.png" />
+  <meta name="twitter:image" content="img/original logo.png" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Averix Solutions — Empowering Innovation with Software, AI & Intelligent Design" />
   <meta name="twitter:description" content="Innovation starts here. Based in Solapur, Maharashtra." />
-  <meta name="twitter:image" content="https://images.unsplash.com/photo-1518779578993-ec3579fee39f?q=80&w=1600&auto=format&fit=crop" />
   <meta name="theme-color" content="#0b0f19" />
 
   <!-- Fonts & Icons -->
